# stellar

./: .gitignore  Cargo.toml  DESIGN.md  README.md  build.rs  wesl.toml
src/: app.rs  camera.rs  components.rs  main.rs  misc.rs
src/components/: mod.rs
src/components/editor_controller/: component.rs  inputs.rs  mod.rs  momentum.rs  motion.rs  projections.rs  smoothing.rs  zoom.rs
src/components/panorbit_controller/: mod.rs  util.rs
src/math/: mod.rs  projection.rs  transform.rs
src/renderer/: egui_renderer.rs  graphics.rs  mod.rs  stack.rs  ui.rs
src/renderer/shaders/: bloom.wesl  composite.frag.wgsl  composite.wesl  fractal.wesl  fullscreen.vert.wgsl  fullscreen.wesl  schwarschild.wgsl  sierpinski.wesl  star.wesl  ui.wgsl
src/renderer/shaders/materials/: skybox.wgsl  star.wgsl
src/renderer/shaders/raymarching/: naive.wgsl
src/renderer/shaders/vbuffer/: material_count.wesl
src/renderer/stack/: bloom.rs  hdr.rs  mod.rs  standard.rs
src/state/: mod.rs
src/toolkit/: button.rs  color_table.rs  design_tokens.rs  format.rs  icons.rs  menu.rs  mod.rs  ui_ext.rs
